# mcp-server-demo

./: README.md  pyproject.toml
mcp_simple_resource/: server.py
